--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
+
 {
+  "homepage": "https://github.com/pranjalsingh03/react-app",
+
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,17 +14,23 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.18",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
+    "react-toggle": "^4.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
