--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
-
 {
-  "homepage": "https://github.com/pranjalsingh03/react-app",
-
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://pranjalsingh03.github.io/react-app", 
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
