--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "homepage": "http://pranjalsingh03.github.io/react-app", 
+  "homepage": "http://pranjalsingh03.github.io/react-app",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
@@ -24,12 +23,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
