--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://pranjalsingh03.github.io/react-app/",
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
