--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
@@ -20,6 +19,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-toggle": "^4.1.3",
     "web-vitals": "^2.1.4"
