--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-node_modules/
+node_modules/.cache
 node_modules
 node_modules
 build
+node_modules/.cache/default-development/0.pack
+node_modules/.cache/default-development/1.pack
+node_modules/.cache/default-development/2.pack
+node_modules/.cache/default-development/3.pack
+node_modules/.cache/default-development/4.pack
+node_modules/.cache/default-development/5.pack
+node_modules/.cache/default-development/7.pack
+node_modules/.cache/default-development/8.pack
+node_modules/.cache/default-development/index.pack
+node_modules/.cache/default-development/index.pack.old
+node_modules/
+node_modules
+node_modules/.cache/default-development/0.pack
+node_modules/.cache/default-development/0.pack
+node_modules/.cache/default-development/1.pack
+node_modules/.cache/default-development/2.pack
+node_modules/.cache/default-development/3.pack
+node_modules/.cache/default-development/4.pack
+node_modules/.cache/default-development/5.pack
+node_modules/.cache/default-development/7.pack
+node_modules/.cache/default-development/8.pack
+node_modules/.cache/default-development/index.pack
+node_modules/.cache/default-development/index.pack.old
+.cache/
+node_modules/.cache/default-development/0.pack
+node_modules/.cache/default-development/1.pack
+node_modules/.cache/default-development/2.pack
+node_modules/.cache/default-development/3.pack
+node_modules/.cache/default-development/4.pack
+node_modules/.cache/default-development/5.pack
+node_modules/.cache/default-development/7.pack
+node_modules/.cache/default-development/8.pack
+node_modules/.cache/default-development/index.pack
+node_modules/.cache/default-development/index.pack.old
