--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-toggle": "^4.1.3",
+    "typed.js": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
