--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pranjalsingh03.github.io/react-app",
+  "homepage": "https://pranjalsingh.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
