--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ node_modules/.cache/default-development/7.pack
 node_modules/.cache/default-development/8.pack
 node_modules/.cache/default-development/index.pack
 node_modules/.cache/default-development/index.pack.old
+
+.env
